--- a/src/components/sidebar/sideBarAnimations.css
+++ b/src/components/sidebar/sideBarAnimations.css
@@ -9,3 +9,16 @@
 .sidebar-icon.closed path:last-child {
   d: path("m16 15-3-3 3-3");
 }
+
+/* .hiddenbar {
+  transition: transform 0.3s ease-in-out;
+  transform: translateX(-100%);
+  
+}
+
+.hiddenbar.open {
+  transform: translateX(0);
+}
+x .hiddenbar.closed {
+  transform: translateX(calc(-100%));
+} */
