--- a/src/components/sidebar/sideBarAnimations.css
+++ b/src/components/sidebar/sideBarAnimations.css
@@ -1,3 +1,5 @@
+@import "tailwindcss";
+
 .sidebar-icon path {
   transition: d 0.5s ease;
 }
@@ -10,15 +12,6 @@
   d: path("m16 15-3-3 3-3");
 }
 
-/* .hiddenbar {
-  transition: transform 0.3s ease-in-out;
-  transform: translateX(-100%);
-  
+.sidebarItem {
+  @apply h-10 p-2 w-45 overflow-hidden text-black;
 }
-
-.hiddenbar.open {
-  transform: translateX(0);
-}
-x .hiddenbar.closed {
-  transform: translateX(calc(-100%));
-} */
